# kodegen-bash-shell

./: ACKNOWLEDGEMENTS.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: call-func.rs  custom-builtin.rs  streaming.rs
src/: lib.rs
src/builtins/: alias.rs  bg.rs  bind.rs  break_.rs  brushinfo.rs  builder.rs  builtin_.rs  cd.rs  colon.rs  command.rs  complete.rs  continue_.rs  declare.rs  dirs.rs  dot.rs  echo.rs  enable.rs  eval.rs  exec.rs  exit.rs  export.rs  factory.rs  false_.rs  fc.rs  fg.rs  getopts.rs  hash.rs  help.rs  history.rs  jobs.rs  kill.rs  let_.rs  mapfile.rs  mod.rs  popd.rs  printf.rs  pushd.rs  pwd.rs  read.rs  return_.rs  (+15 more)
src/core/: arithmetic.rs  braceexpansion.rs  builtins.rs  commands.rs  completion.rs  env.rs  error.rs  escape.rs  expansion.rs  extendedtests.rs  functions.rs  history.rs  interp.rs  jobs.rs  mod.rs  namedoptions.rs  openfiles.rs  options.rs  pathcache.rs  pathsearch.rs  patterns.rs  processes.rs  prompt.rs  regex.rs  results.rs  shell.rs  terminal.rs  tests.rs  timing.rs  traps.rs  variables.rs  wellknownvars.rs
src/core/sys/: fs.rs  stubs.rs  unix.rs  wasm.rs  windows.rs
src/core/sys/stubs/: commands.rs  fd.rs  fs.rs  input.rs  process.rs  resource.rs  signal.rs  terminal.rs  users.rs
src/core/sys/unix/: commands.rs  fd.rs  fs.rs  input.rs  network.rs  resource.rs  signal.rs  terminal.rs  users.rs
src/core/sys/windows/: users.rs
src/interactive/: completion.rs  error.rs  interactive_shell.rs  options.rs
src/interactive/basic/: basic_shell.rs  mod.rs  non_term_line_reader.rs  term_line_reader.rs
src/interactive/minimal/: minimal_shell.rs
src/interactive/reedline/: completer.rs  edit_mode.rs  highlighter.rs  history.rs  prompt.rs  reedline_shell.rs  refs.rs  validator.rs
src/parser/: arithmetic.rs  ast.rs  error.rs  mod.rs  parse.rs  parser.rs  pattern.rs  prompt.rs  readline_binding.rs  snapshot_tests.rs  test_command.rs  tokenizer.rs  word.rs
src/shell/: args.rs  brushctl.rs  entry.rs  error_formatter.rs  events.rs  main.rs  shell_factory.rs
